--- a/blog/style.css
+++ b/blog/style.css
@@ -14,6 +14,9 @@
     --cor7:#fff;
     --cor8:#ccc;
     --cor9:#f1f1f1;
+    --cor10:#f1f5f9;
+    --cor11:#c2410c;
+    --cor12:#eab308;
 }
 
 
@@ -21,14 +24,19 @@
 header{
     width: 100%;
     background-color: var(--cor1);
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 nav{
     width:100%;
     height: 80px;
+    background-color: var(--cor1);
     border-bottom: 1px solid var(--cor2);
     display: flex;
     justify-content: center;
+
 }
 
 .header__Container{
@@ -63,6 +71,12 @@ nav{
 .header__Container li a:hover{
     cursor: pointer;
     color: var(--cor7);
+    opacity: 100%;
+}
+
+.header__Container .selected{
+    color: var(--cor7);
+    font-weight: bold;
     opacity: 100%;
 }
 .login__button{
