--- a/estudante/style.css
+++ b/estudante/style.css
@@ -16,21 +16,28 @@
     --cor5:#444860;
     --cor7:#fff;
     --cor8:#ccc;
+    --cor10:#f1f5f9;
+    --cor11:#c2410c;
+    --cor12:#eab308;
 }
 
 
 header{
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     background-color: var(--cor1);
 }
 
 nav{
     width:100%;
     height: 80px;
+    background-color: var(--cor1);
     border-bottom: 1px solid var(--cor2);
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
 .header__Container{
@@ -65,6 +72,12 @@ nav{
 .header__Container li a:hover{
     cursor: pointer;
     color: var(--cor7);
+    opacity: 100%;
+}
+
+.header__Container .selected{
+    color: var(--cor7);
+    font-weight: bold;
     opacity: 100%;
 }
 .login__button{
@@ -142,7 +155,7 @@ nav{
 
 .button__actiom{
     background-color: var(--cor1);
-    padding: 12px;
+    padding: 15px;
     border-radius: 12px;
 }
 
@@ -186,6 +199,7 @@ main{
     width: 70%;
     line-height: 23px;
     color: var(--cor8);
+    text-align: center;
 }
 .container__info__content__dash{
     width: 100%;
