--- a/faleconosco/style.css
+++ b/faleconosco/style.css
@@ -14,23 +14,32 @@
     --cor7:#fff;
     --cor8:#ccc;
     --cor9:#f1f1f1;
+    --cor10:#f1f5f9;
+    --cor11:#c2410c;
+    --cor12:#eab308;
 }
 
 
 
 header{
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     background-color: var(--cor1);
+    
+  
  
 }
 
 nav{
     width:100%;
     height: 80px;
+    background-color: var(--cor1);
     border-bottom: 1px solid var(--cor2);
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
 .header__Container{
@@ -67,6 +76,12 @@ nav{
     color: var(--cor7);
     opacity: 100%;
 }
+
+.header__Container .selected{
+    color: var(--cor7);
+    font-weight: bold;
+    opacity: 100%;
+}
 .login__button{
     width: fit-content;
     padding: 10px;
@@ -84,7 +99,7 @@ nav{
 
 .content__header{
     width: 100%;
-    height: 88%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
