--- a/index.css
+++ b/index.css
@@ -16,21 +16,30 @@
     --cor5:#444860;
     --cor7:#fff;
     --cor8:#ccc;
+    --cor10:#f1f5f9;
+    --cor11:#c2410c;
+    --cor12:#eab308;
 }
 
 
 header{
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     background-color: var(--cor1);
+   
 }
 
 nav{
     width:100%;
     height: 80px;
-    border-bottom: 1px solid var(--cor2);
+    background-color: var(--cor2);
+    border-bottom: 1px solid var(--cor5);
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    
 }
 
 .header__Container{
@@ -65,6 +74,12 @@ nav{
 .header__Container li a:hover{
     cursor: pointer;
     color: var(--cor7);
+    opacity: 100%;
+}
+
+.header__Container .selected{
+    color: var(--cor7);
+    font-weight: bold;
     opacity: 100%;
 }
 .login__button{
