--- a/quemsomos/style.css
+++ b/quemsomos/style.css
@@ -14,13 +14,16 @@
     --cor7:#fff;
     --cor8:#ccc;
     --cor9:#f1f1f1;
+    --cor10:#f1f5f9;
+    --cor11:#c2410c;
+    --cor12:#eab308;
 }
 
 
 
 header{
     width: 100%;
-    height: 60vh;
+    height: 110vh;
     background-color: var(--cor1);
  
 }
@@ -28,9 +31,13 @@ header{
 nav{
     width:100%;
     height: 80px;
+    background-color: var(--cor1);
     border-bottom: 1px solid var(--cor2);
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
 .header__Container{
@@ -62,9 +69,16 @@ nav{
     text-transform: capitalize;
     opacity: 50%;
 }
+
 .header__Container li a:hover{
     cursor: pointer;
     color: var(--cor7);
+    opacity: 100%;
+}
+
+.header__Container .selected{
+    color: var(--cor7);
+    font-weight: bold;
     opacity: 100%;
 }
 .login__button{
@@ -84,11 +98,11 @@ nav{
 
 .content__header{
     width: 100%;
-    height: 88%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("../assets/image8.jpg");
+    background:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url("../assets/image8.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -120,7 +134,8 @@ nav{
 }
 .header__conteudo p{
     color: var(--cor7);
-    line-height: 25px;
+    line-height: 27px;
+    text-align: center;
 
 }
 /*-----------------------*/
@@ -157,7 +172,7 @@ main{
 }
 .visao__content__conteudo p{
     color: var(--cor5);
-    line-height: 25px;
+    line-height: 32px;
 }
 .visao__image__area{
     width: 50%;
@@ -390,3 +405,4 @@ footer{
     font-size: 18px;
     color: var(--cor8);
 }
+
