actualizando a pagina do curso

--- a/cursos/style.css
+++ b/cursos/style.css
@@ -506,6 +506,7 @@ nav{
     margin-bottom: 16px;
     text-align: center;
     line-height: 22px;
+     height: 175px;
 }
 
 .profissionais__container__content__conponet a{
@@ -516,10 +517,13 @@ nav{
     padding: 8px 20px;
     border-radius: 40px;
 }
+
+
 .profissionais__container__content__conponet a:hover{
     background-color: var(--cor5);
     color: var(--cor7);
 }
+
 
 /*-------------------*/
 .conclusition__courses{
