--- a/cursos/style.css
+++ b/cursos/style.css
@@ -91,6 +91,7 @@ nav{
     font-weight: bold;
     border-radius: 10px;
     color: var(--cor7);
+    text-decoration: none;
 }
 
 .login__button:hover{
@@ -245,6 +246,13 @@ nav{
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
+    transition: 1s;
+}
+
+.course__card__header img:hover{
+    filter: grayscale(0);
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .course__content{
