--- a/estudante/style.css
+++ b/estudante/style.css
@@ -87,6 +87,7 @@ nav{
     font-weight: bold;
     border-radius: 10px;
     color: var(--cor7);
+    text-decoration: none;
 }
 
 .login__button:hover{
