--- a/quemsomos/style.css
+++ b/quemsomos/style.css
@@ -88,6 +88,7 @@ nav{
     font-weight: bold;
     border-radius: 10px;
     color: var(--cor7);
+    text-decoration: none;
 }
 
 .login__button:hover{
